--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="about-us.html">About Us</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
