--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
     <nav class="navbar">
         <div class="logo">
             <img src="img/tig.webp" alt="Tig Logo">
@@ -27,11 +28,12 @@
         </div>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
-            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="#">Events</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact-us.html">Contact</a></li>
         </ul>
     </nav>
+    <div class="empty-div"></div>
 
     <div class="swiper-container">
         <div class="swiper-wrapper">
@@ -103,7 +105,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 TIG</p>
+        <p>&copy; TIG</p>
     </footer>
 
     <script src="script.js"></script>
