--- a/contact-us.html
+++ b/contact-us.html
@@ -159,6 +159,8 @@
 
             .then(data => {
                 document.querySelector("#sending").innerHTML = "sent"
+                                form.reset();
+
             });
         })
     </script>
