--- a/contact-us.html
+++ b/contact-us.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
         <div class="logo">
             <img src="img/tig.webp" alt="Tig Logo">
-            <h1>Tig</h1>
+            <h1 style="font-family:Arial, sans-serif;font-size:24px;font-weight: bold;">Tig</h1>
         </div>
         <div class="menu-toggle">
             <div class="bar"></div>
@@ -72,7 +72,7 @@
 
                 <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
         <div class="alt-send-button">
-          <i class="fa fa-paper-plane" id="sending"></i><span class="send-text">SEND</span>
+            <i class="fa fa-envelope" id="sending"></i><span class="send-text">SEND</span>
         </div>
       
       </button>
@@ -82,7 +82,7 @@
             <div class="direct-contact-container">
 
                 <ul class="contact-list">
-                    <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place">Borg Al-Arab, BATU</span></i></li>
+                    <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place"><a href="#" title="thats our location">Borg Al-Arab, BATU</a></span></i></li>
 
                     <li class="list-item">
                         <i class="fa fa-whatsapp fa-2x"><span class="contact-text phone">
@@ -92,7 +92,7 @@
                       </span></i>
                     </li>
 
-                    <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#" title="Send me an email">TIG@gmail.com</a></span></i></li>
+                    <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="#" title="Send me an email">TIG@gmail.com</a></span></i></li>
 
                 </ul>
 
@@ -112,9 +112,9 @@
                         </a>
                     </li>
 
-                    <li style="background-color: #1da1f2;">
-                        <a href="#" target="_blank" class="contact-icon" style="background-color: #1da1f2;">
-                            <i class="fa fa-twitter" aria-hidden="true" style="color: #fff;"></i>
+                    <li style="background-color: #000;">
+                        <a href="#" target="_blank" class="contact-icon" style="background-color: #000;">
+                            <img src="icons/x-twitter.svg" alt="Twitter" style="color: #fff!important; width: 24px; height: 24px;">
                         </a>
                     </li>
 
@@ -159,7 +159,7 @@
 
             .then(data => {
                 document.querySelector("#sending").innerHTML = "sent"
-                                form.reset();
+                form.reset();
 
             });
         })
