--- a/contact-us.html
+++ b/contact-us.html
@@ -35,7 +35,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Events</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="current"><a href="#" style="color:#fff; background-color: #6a6a6a;padding: 5px 0;">Contact</a></li>
         </ul>
     </nav>
     <div class="empty-div"></div>
