--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="bar"></div>
         </div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li class="current"><a href="#" style="color: #fff; background-color: #6a6a6a;padding: 5px 0;">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="contact-us.html">Contact</a></li>
