--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
         </div>
     </div>
 
+    <section class="video-section">
+        <h2 class="title">هنا السكشن بتاع الفيديو</h2>
+        <div class="content">
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-text">
+                <h3>مقاله بسيطه عن الفيديو</h3>
+                <p>وصف</p>
+                <button class="more-button">More</button>
+            </div>
+        </div>
+    </section>
+
     <section class="about-us scroll-reveal">
         <h2>About Us</h2>
         <p>
